updated reduced cyclomatic compplexity of weblogentry